# piwigo-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
piwigo/: __init__.py  client.py
piwigo/models/: album.py  extra.py  images.py
tests/: conftest.py  test_client.py
tests/fixtures/: test_invalid_username.json
