[tool.poetry]
name = "piwigo-client"
version = "0.1.0"
description = "A simple Python API client for the Piwigo photo gallery"
authors = ["Peter Gebhard <peter@petergebhard.com>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "0.23.0"
pydantic = "1.9.1"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
bandit = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest_httpx = "0.21.0"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
